--- a/style.css
+++ b/style.css
@@ -1,103 +1,166 @@
-/* font family: 'Roboto', sans-servif; */
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-servif;
+    font-family: "Roboto", sans-serif;
     outline: none;
 }
 
-body{
-    background-color: #8A51FC;
+video {
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
 }
 
-.logo {
-    width: 300px;
-    display: block;
-    margin: 20px auto;
+.caixa-video {
+    position: fixed;
+    top: 0;
+    z-index: -1;
 }
 
-main{
+.container {
     width: 375px;
     background: #F4F4F4;
     border-radius: 20px;
     margin: 0 auto 40px;
     padding: 44px 24px 23px;
+    margin-top: 30px;
 }
 
-label{
-    color: #777777;
+
+header {
+
+    background-color: #1B83E2;
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 18px;
+    color: #F4F4F4;
+}
+
+main {
+    padding: 24px;
+}
+
+label {
+
+    font-style: normal;
     font-weight: 400;
     font-size: 14px;
+    line-height: 18px;
+    color: #777777;
 }
 
-select, input {
+select {
+
+    width: 100%;
+    height: 48px;
     background: #FFFFFF;
     border: 1px solid #BBBBBB;
     border-radius: 4px;
-    height: 48px;
-    width: 100%;
-    margin-bottom: 24px;
-    appearance: none;
-    padding-left: 18px;
-    font-weight: 700;
-    font-size: 16px;
-    color: #555555;
+    display: block;
     cursor: pointer;
-    
+    outline: none;
+    appearance: none;
+    padding: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    margin-top: 6px;
+    margin-bottom: 24px;
+    color: #555555;
+    font-weight: 700;
+}
+
+input {
+
+    width: 100%;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #BBBBBB;
+    border-radius: 4px;
+    display: block;
+    padding: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    margin-top: 6px;
+    font-size: 18px;
+
+}
+
+input::placeholder {
+    color: #555555;
+    font-weight: 700;
 }
 
 button {
-    background: #772FD3;
-    border-radius: 5px;
-    width:100%;
-    border: none;
+    background: #1B83E2;
+    border-radius: 25px;
     height: 48px;
-    color: #FFFFFF;
+    width: 100%;
+    color: white;
+    cursor: pointer;
+    border: none;
+    font-size: 16px;
     font-weight: 700;
-    font-size: 18px;
+    margin-top: 24px;
+    margin-bottom: 36px;
 }
 
 button:hover {
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 button:active {
-    opacity: 0.6;
-    
+    opacity: 0.7;
 }
 
 section {
-    border: 1px solid #772FD3;
-    border-radius: 20px;
-    margin-top: 36px;
-    padding: 12px;
+    border: 1px solid #1B83E2;
+    border-radius: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    gap: 15px;
 }
 
-.arrow-img{
-    margin: 15px 0;
-}
-
-.currency-box{
+.currency-container {
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4px;
-
+    gap: 2px;
 }
 
-.currency-value, .currency-value-to-convert {
-    color: #555555;
+.currency-name {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #777777;
+    margin-top: 4px;
+    margin-bottom: 2px;
+}
+
+.currency-value {
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 700;
     font-size: 20px;
+    line-height: 18px;
+    color: #1B83E2;
 }
 
-.currency {
-    color: #777777;
-    font-size: 14px;
+.inform {
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
 }
